# homework3-11-5

./: CMakeLists.txt  DynamicLibraryClient.cpp  Figure.h  homework3-11-4.sln
DynamicLibraryClient/: DynamicLibraryClient.vcxproj  DynamicLibraryClient.vcxproj.filters
FigureLibrary/: Equil_triangle.h  Figure.h  FigureLibrary.vcxproj  FigureLibrary.vcxproj.filters  Iso_triangle.h  Parallelogram.h  Quadrangle.h  Rectangle.h  Rhombus.h  Right_triangle.h  Square.h  Triangle.h  cpp.hint
